Rough-in sky map display options, sky toggle click. Handling floating clock hands. Fix 16x9 layout issues.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -122,22 +122,21 @@ label {
 
 #clock-container, #clock-overlay {
   display: inline-block;
-  position: absolute;
   left: 0;
-  right: 0;
   margin: auto;
-  width: calc(1.556 * (100vh - 2em));
-  padding: 1em;
-  vertical-align: middle;
   overflow: visible;
+  padding: 1rem;
+  position: absolute;
+  right: 0;
+  width: calc(1.556 * (100vh - 2rem));
 
   &.display16x9 {
-    width: calc(1.675 * (100vh - 2em));
+    width: calc(1.675 * (100vh - 2rem));
   }
 }
 
 #clock-container {
-  background: var(--background-color);
+  background-color: var(--background-color);
 }
 
 #clock-overlay {
@@ -146,17 +145,13 @@ label {
   z-index: 20;
 }
 
-.clock-container-ie-fix {
-  height: 100%;
-}
-
 @media only screen and (max-aspect-ratio: 43 / 27) {
-  #clock-container {
-    width: calc(100vw - 4em);
+  #clock-container, #clock-overlay {
+    width: calc(100vw - 4rem);
   }
 }
 
-#clock {
+#clock, #clock-overlay-svg {
   font-family: $std-font;
   fill: white;
   overflow: visible;
@@ -1129,6 +1124,25 @@ input, button, select, textarea, optgroup, option { // Ignored by macOS Chrome f
 
 .sky-map {
   position: fixed;
-  pointer-events: none;
+  transition: opacity 1s;
   z-index: 10;
+}
+
+#clock-overlay-svg {
+  opacity: 1;
+  pointer-events: none;
+
+  &.float {
+    #hands {
+      opacity: 0.4;
+    }
+
+    .dot {
+      opacity: 0;
+
+      &.big-dot {
+        opacity: 0.25;
+      }
+    }
+  }
 }
